2025-11-05T12:17:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19101710921 # 1287
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-05
* notice: last 14d: unq all: 18 38
* notice: prev accum: outdated-unq outdated-all / unq all: 1237 5965 / 1256 6018
* notice: next accum: outdated-unq outdated-all / unq all: 1256 6018 / 1274 6056
* notice: prev exec diff / last date diff / accum: unq all: +18 +38 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2025-10-03 2025-10-06 2025-10-07 2025-10-08 2025-10-09 2025-10-14 2025-10-15] / [2025-10-23 2025-10-24 2025-10-25 2025-10-26 2025-10-28 2025-10-29 2025-10-30 2025-10-31 2025-11-01 2025-11-02 2025-11-03 2025-11-05]

2025-10-16T12:55:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18561967682 # 1286
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-16
* notice: last 14d: unq all: 17 53
* notice: prev accum: outdated-unq outdated-all / unq all: 1235 5963 / 1256 6018
* notice: next accum: outdated-unq outdated-all / unq all: 1237 5965 / 1256 6018
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-02] / []

2025-10-16T01:58:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18547889335 # 1285
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-16
* notice: last 14d: unq all: 18 54
* notice: prev accum: outdated-unq outdated-all / unq all: 1227 5948 / 1256 6018
* notice: next accum: outdated-unq outdated-all / unq all: 1235 5963 / 1256 6018
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1