@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-05T12:17:53Z",
+  "timestamp" : "2025-11-06T00:43:40Z",
   "count_outdated" : 6018,
   "uniques_outdated" : 1256,
-  "count" : 6056,
-  "uniques" : 1274,
+  "count" : 6059,
+  "uniques" : 1275,
   "views" : [
     {
       "timestamp": "2025-10-23T00:00:00Z",
@@ -106,12 +106,12 @@
     },
     {
       "timestamp": "2025-11-05T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 5,
+      "count_minmax": [ 2, 5 ],
+      "count_decinc": [ 0, 5 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
