@@ -1,6 +1,6 @@
 {
-  "count": 38,
-  "uniques": 18,
+  "count": 41,
+  "uniques": 19,
   "views": [
     {
       "timestamp": "2025-10-23T00:00:00Z",
@@ -59,8 +59,8 @@
     },
     {
       "timestamp": "2025-11-05T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 5,
+      "uniques": 2
     }
   ]
 }
