@@ -1,3 +1,12 @@
+2025-11-06T00:43:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19120987619 # 1288
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-06
+* notice: last 14d: unq all: 19 41
+* notice: prev accum: outdated-unq outdated-all / unq all: 1256 6018 / 1274 6056
+* notice: next accum: outdated-unq outdated-all / unq all: 1256 6018 / 1275 6059
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +2 +5 -0 -0 / 2 5
+* notice: removed / changed dates: [] / [2025-11-05]
+
 2025-11-05T12:17:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19101710921 # 1287
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-05
